--- a/ch5.html
+++ b/ch5.html
@@ -22,6 +22,11 @@
     <a class="tab-btn" href="ch4.html"><span class="tab-num">4장</span>표현 강도 &amp; 톤</a>
     <a class="tab-btn active" href="ch5.html"><span class="tab-num">5장</span>대안 &amp; 이용자</a>
     <a class="tab-btn" href="ch6.html"><span class="tab-num">6장</span>레시피 &amp; 고급</a>
+    <a class="tab-btn" href="ch7.html"><span class="tab-num">7장</span>품질 향상</a>
+    <a class="tab-btn" href="ch8.html"><span class="tab-num">8장</span>구조화</a>
+    <a class="tab-btn" href="ch9.html"><span class="tab-num">9장</span>비즈니스</a>
+    <a class="tab-btn" href="ch10.html"><span class="tab-num">10장</span>자동화</a>
+    <a class="tab-btn" href="ch11.html"><span class="tab-num">11장</span>인터랙티브</a>
   </nav>
 </div>
 
